--- a/openapi/components/schemas/addWalletContents.yaml
+++ b/openapi/components/schemas/addWalletContents.yaml
@@ -5,10 +5,11 @@ properties:
     description: Wallet code.
     example: 1
   quantity:
-    type: decimal
+    type: number
+    format: decimal
     description: Quantity
     example: 1.25
 
-  required:
-    - walletCode
-    - quantity
+required:
+  - walletCode
+  - quantity
