--- a/openapi/components/schemas/pointExpirationInfo.yaml
+++ b/openapi/components/schemas/pointExpirationInfo.yaml
@@ -1,7 +1,8 @@
 type: object
 properties:
   quantity:
-    type: decimal
+    type: number
+    format: decimal
     description: The quantity of reward that will expire
     example: 1.00
   date:
