--- a/openapi/components/schemas/pointInfo.yaml
+++ b/openapi/components/schemas/pointInfo.yaml
@@ -9,6 +9,7 @@ properties:
     description: A numeric identifier for the point balance, unique for a given merchant
     example: 2
   balance:
-    type: decimal
+    type: number
+    format: decimal
     description: The quantity of the balance remaining on the card after the transaction
     example: 2.00
