--- a/openapi/components/schemas/subtotalDiscount.yaml
+++ b/openapi/components/schemas/subtotalDiscount.yaml
@@ -9,7 +9,8 @@ properties:
     description: Human-readable name of discount.
     example: Two Dollars Off Item 3
   discount:
-    type: decimal
+    type: number
+    format: decimal
     description: Full amount by which the target item should be discounted.
     example: 1.25
   discountType:
@@ -26,7 +27,8 @@ properties:
     description: A numeric identifier for a specific type of discount, unique for a given merchant.
     example: 50
   quantityRedeemed:
-    type: decimal
+    type: number
+    format: decimal
     description: Actual number of points in the Paytronix wallet which will be redeemed when the transaction is finalized.
     example: 1.50
   applyAutomatically:
