--- a/openapi/paths/transaction/reverse.yaml
+++ b/openapi/paths/transaction/reverse.yaml
@@ -18,4 +18,11 @@ get:
   security:
     - bearer_auth: []
   responses:
-    $ref: '../../components/responses/transactionReply.yaml'
+    '200':
+      description: Ok
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/responses/transactionReply.yaml'
+    '401':
+      $ref: '../../components/responses/Unauthorized.yaml'
