--- a/openapi/components/schemas/tenderItem.yaml
+++ b/openapi/components/schemas/tenderItem.yaml
@@ -21,7 +21,8 @@ properties:
     description: Reference line for the tender item, if any.
     example: 
   amount:
-    type: decimal
+    type: number
+    format: decimal
     description: Amount of the tender. Typically a negative amount (reducing the check total). Can be 0, such as in the case of loyalty cards that are not being used as comp cards.
     example: -12.00
   detail:
