--- a/openapi/paths/check/post.yaml
+++ b/openapi/paths/check/post.yaml
@@ -16,4 +16,11 @@ post:
     description: The check to post
     required: true
   responses:
-    $ref: '../../components/responses/checkPostResponse.yaml'
+    '200':
+      description: Ok
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/responses/checkPostResponse.yaml'
+    '401':
+      $ref: '../../components/responses/Unauthorized.yaml'
