--- a/openapi/paths/check/postAndAccruePointsWithRedeem.yaml
+++ b/openapi/paths/check/postAndAccruePointsWithRedeem.yaml
@@ -18,4 +18,11 @@ post:
     description: The check to post
     required: true
   responses:
-    $ref: '../../components/responses/checkPostAndAccrueResponse.yaml'
+    '200':
+      description: Ok
+      content:
+        application/json:
+          schema:
+            $ref: '../../components/responses/checkPostAndAccrueResponse.yaml'
+    '401':
+      $ref: '../../components/responses/Unauthorized.yaml'
