Fix another path

--- a/openapi/components/schemas/balancePoint.yaml
+++ b/openapi/components/schemas/balancePoint.yaml
@@ -19,7 +19,7 @@ properties:
   expirationDates:
     type: array
     items:
-      $ref: '.\expirationDate.yaml'
+      $ref: './expirationDate.yaml'
 
 required:
   - pointName
