--- a/openapi/paths/enrollment/smsEnroll.yaml
+++ b/openapi/paths/enrollment/smsEnroll.yaml
@@ -13,7 +13,7 @@ get:
     description: Phone number to enroll
     required: true
   security:
-    - bearer_auth: []
+    - basic_auth: []
   responses:
     '200':
       description: Ok
