--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,7 +80,7 @@ jobs:
         path: dist
 
     - name: Build
-      run: yardarm generate -i ./dist/centeredge-paytronixapi.yaml -f net6.0 netstandard2.0 --embed --nupkg ./dist/ -n CenterEdge.PaytronixApi -v ${{ needs.buildSpec.outputs.nuGetVersionV2 }} -x Yardarm.NewtonsoftJson --repository-url https://github.com/${GITHUB_REPOSITORY}.git --repository-commit ${GITHUB_SHA}
+      run: yardarm generate -i ./dist/centeredge-paytronixapi.yaml -f net6.0 netstandard2.0 --embed --nupkg ./dist/ -n CenterEdge.PaytronixApi -v ${{ needs.buildSpec.outputs.nuGetVersionV2 }} -x Yardarm.SystemTextJson Yardarm.MicrosoftExtensionsHttp --repository-url https://github.com/${GITHUB_REPOSITORY}.git --repository-commit ${GITHUB_SHA}
 
     - name: Push
       working-directory: ./dist
