Add properties property to headerInfo

--- a/openapi/components/schemas/headerInfo.yaml
+++ b/openapi/components/schemas/headerInfo.yaml
@@ -40,6 +40,10 @@ properties:
       - SV
       - CH
       - PX
+  properties:
+    type: object
+    additionalProperties:
+      type: string
 required:
   - merchantId
   - storeCode
@@ -48,3 +52,4 @@ required:
   - posTransactionId
   - senderId
   - programId
+  - properties
