--- a/openapi/components/schemas/header.yaml
+++ b/openapi/components/schemas/header.yaml
@@ -41,9 +41,9 @@ properties:
     description: Cashier (operator) ID.
     example: 43
   properties:
-    type: array
+    type: object
     description: Can be empty. Additional POS-specific properties as strings. Defaults to empty.
-    items:
+    additionalProperties:
       type: string
   isVoid:
     type: boolean
