--- a/openapi/components/schemas/discountItem.yaml
+++ b/openapi/components/schemas/discountItem.yaml
@@ -1,9 +1,7 @@
 type: object
+allOf:
+  - $ref: './checkItemBase.yaml'
 properties:
-  type:
-    type: string
-    description: Identifies this item as a menu item. Must always be "discountItem"
-    example: discountItem
   itemId:
     type: string
     description: Identifier for the discount item. This identifies the discount item in the Paytronix database, not the particular line item in the check.
@@ -73,6 +71,5 @@ properties:
     example: 4321
 
 required:
-  - type
   - itemId
   - price
