--- a/openapi/components/schemas/serviceChargeItem.yaml
+++ b/openapi/components/schemas/serviceChargeItem.yaml
@@ -1,9 +1,7 @@
 type: object
+allOf:
+  - $ref: './checkItemBase.yaml'
 properties:
-  type:
-    type: string
-    description: Identifies this item as a menu item. Must always be "serviceChargeItem"
-    example: serviceChargeItem
   itemId:
     type: string
     description: Identifier for the service charge item. This identifies the service charge item in the Paytronix database, not the particular line item in the check.
@@ -60,6 +58,5 @@ properties:
     example: 0
 
 required:
-  - type
   - itemId
   - price
